set condition for arrow and fix overflowing text in mobile

--- a/src/components/components.module.css
+++ b/src/components/components.module.css
@@ -646,6 +646,12 @@ input[type=text]::placeholder {
 		-ms-flex-order: 2;
 		-webkit-order: 2;
 		order: 2;
+		width: 85%;
+		margin: 0 auto;
+	}
+
+	.wholecaption > .caption {
+		padding: 0;
 	}
 
 	.artwork {
@@ -655,6 +661,16 @@ input[type=text]::placeholder {
 		-webkit-order: 1;
 		order: 1;
 		margin-bottom: 50px;
+	}
+
+	/* this for now */
+	a {
+		white-space: pre-wrap;      /* CSS3 */
+		white-space: -moz-pre-wrap; /* Firefox */
+		white-space: -pre-wrap;     /* Opera <7 */
+		white-space: -o-pre-wrap;   /* Opera 7 */
+		word-wrap: break-word;      /* IE */
+		text-decoration: underline;
 	}
 }
 /* .gallery {
